--- a/app.json
+++ b/app.json
@@ -15,16 +15,28 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.silvo.MonkeySeeMonkeyDo"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.silvo.MonkeySeeMonkeyDo"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "30614d29-4bb8-4752-b076-f56aba41a333"
+      }
+    },
+    "owner": "silvo",
+    "runtimeVersion": "1.0.0",
+    "updates": {
+      "url": "https://u.expo.dev/30614d29-4bb8-4752-b076-f56aba41a333"
     }
   }
 }
